2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Removed temp_shell. No more used.
	* src/login.c: lastlog is only used #ifndef USE_PAM
	* src/login.c: Rename lastlog to ll to avoid name clash with the
	lastlog type.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Added update_utmp() to group the prepare_utmp and
	setutmp (and the utmpx versions).

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Do not include netdb.h. gethostbyname() is no more
	called from within login.c. Also UT_ADDR does not exist anymore.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Check if login is run with effective root
	privileges. This should be more helpful to users than a failure to
	find an utmp entry or failure to access a file.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c: Reworked. Get rid of Linux specific stuff. Get rid
	of global utent/utxent variables. Only reuse the ut_id and maybe
	the ut_host fields from utmp.
	* lib/prototypes.h, libmisc/utmp.c: Removed checkutmp(),
	setutmp(), setutmpx().
	* lib/prototypes.h, libmisc/utmp.c: Added get_current_utmp(),
	prepare_utmp(), prepare_utmpx(), setutmp(), setutmpx().
	* libmisc/utmp.c (is_my_tty): Only compare the name of the utmp
	line with ttyname(). (No stat of the two terminals to compare the
	devices).
	* libmisc/utmp.c: Use getaddrinfo() to get the address of the
	host.
	* configure.in: Check for getaddrinfo().
	* configure.in: Use AC_CHECK_MEMBERS to check for the existence of
	fields in the utmp/utmpx structures.
	* configure.in: Reject systems with utmpx support but no ut_id
	field in utmp. This could be fixed later if needed.
	* src/login.c: Use the new utmp functions. This also simplifies
	the failtmp() handling.
	* src/login.c: passwd_free() renamed to pw_free() and
	shadow_free() renamed to spw_free()
