@@ -1,3 +1,7 @@
+2009-04-22  Paul Szabo  <psz@maths.usyd.edu.au>
+
+	* src/login.c: utent might be NULL after get_current_utmp().
+
 2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* src/login.c: Removed temp_shell. No more used.
